[1.January 2009]
- collisiontest.rb: RD->RDoc (why don't I move this to SchwerEngine?)
- alternatives.rb: removed (remaining corpse of the compiled extensions 
  will be removed soon)
- all files which deal with configuration: configuration files fully enabled
- configuration.rb: on errors name of configuration file is reported;
  Proc with condition can be used in the structure-defining script;
  script loading is SyntaxError-safe
- game.rb: music volume configurability

[31.December 2008]
- fvdef.rb, initfv.rb: panel placement may be set in menu;
  submenu "Graphics" is 50px wider than the rest (because of it)
- topmenu.rb: RD->RDoc
- bottompanelstate.rb: in ItemsExchangeBottomPanelState keys up and down
  are synonyms for left and right (to make it more natural when
  BottomPanel is placed vertically)
- game.rb: fixed mouse controls for BottomPanel in right position
- game.rb, gamestate.rb, bottompanel.rb, bpvikingview.rb: 
  F5 switches panel position in-game
- bottompanel.rb, trash.rb: when an item is dropped into the trash,
  symbol of recyclation rotates for a while
- created directory config/, configuration files moved there
- configuration.rb: class for loading configuration files
- config/structure.conf: definition of structure of a configuration file
  and supported values
- config/defaults.conf: default values

[30.December 2008]
- viking.rb: Viking standing on the top of a ladder is able to climb it down.
- game.rb, bottompanel.rb, bpvikingview.rb, location.rb:
  variable placement of BottomPanel: not only at the bottom of window, but also
  at the top, on the left or on the right

[29.December 2008]
- bottompanel.rb, bpvikingview.rb: 
  cleaner way of determining where user clicked (done by VikingView, 
  not by BottomPanel);
  double-click on an item uses it
- transporter.rb, transportable.rb: commented-out debugging output
- location.rb: all objects get reference of Location
- entities/lock.rb: unlocked Lock deletes itself from the Location